--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -4,7 +4,7 @@
   ~
   ~ Licensed under the Apache License, Version 2.0 (the "License");
   ~ you may not use this file except in compliance with the License.
-  ~ You may obtain a copy of the License at
+  ~ You may obtain TOP copy of the License at
   ~
   ~      http://www.apache.org/licenses/LICENSE-2.0
   ~
@@ -25,7 +25,7 @@
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
-        android:layout_height="500dp"
+        android:layout_height="400dp"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         android:fitsSystemWindows="true">
 
@@ -33,7 +33,8 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|enterAlwaysCollapsed"
+            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+            android:minHeight="100dp"
             android:fitsSystemWindows="true"
             app:contentScrim="?attr/colorPrimary"
             app:expandedTitleMarginStart="48dp"
@@ -64,16 +65,20 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
         <TextView
+            app:scrollFlags="scroll|enterAlways"
             android:text="这是头部"
             android:gravity="center"
             android:textSize="30dp"
             android:background="#70ff0000"
+            android:minHeight="45dp"
             android:layout_width="match_parent"
             android:layout_height="100dp"/>
         <android.support.v4.widget.NestedScrollView
             android:background="#00000000"
             android:layout_width="match_parent"
+            app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
             android:layout_height="match_parent"
+
             app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
             <LinearLayout
