--- a/app/src/main/res/layout/activity_list.xml
+++ b/app/src/main/res/layout/activity_list.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 android:background="#000000">
     <TextView
+        app:scrollFlags="scroll|enterAlways|exitUntilCollapsed"
         android:text="这是头部"
         android:gravity="center"
         android:textSize="30dp"
+        android:minHeight="50dp"
         android:background="#70ff0000"
         android:layout_width="match_parent"
         android:layout_height="200dp"/>
     <com.ytjojo.viewlib.nestedsrolllayout.CompatListView
         android:id="@+id/listView"
+        app:scrollFlags="scroll"
+        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"></com.ytjojo.viewlib.nestedsrolllayout.CompatListView>
 
