--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,11 @@
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.ytjojo.viewlib.nestscrolllayout.demo.MainActivity"
     tools:showIn="@layout/app_bar_main">
+    <com.ytjojo.viewlib.nestscrolllayout.demo.RefreshHeaderLoadingView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    </com.ytjojo.viewlib.nestscrolllayout.demo.RefreshHeaderLoadingView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
