--- a/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
+++ b/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
@@ -11,21 +11,55 @@
         android:id="@+id/refreshHeader"
         app:anchor="@+id/tv_header"
         android:layout_gravity="top"
-        android:fitsSystemWindows="true"
+        android:fitsSystemWindows="false"
         app:anchorGravity="right|bottom"
         app:behavior="com.ytjojo.viewlib.nestedsrolllayout.RefreshHeaderBehavior"
         android:layout_height="60dp"/>
-    <TextView
-        android:fitsSystemWindows="false"
+    <LinearLayout
+        android:fitsSystemWindows="true"
         android:id="@+id/tv_header"
-        android:text="这是头部"
-        android:gravity="center"
-        android:textSize="30dp"
         android:minHeight="?attr/actionBarSize"
-        android:background="#ff0000"
-        app:scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
+        app:scrollFlags="scroll|enterAlways|exitUntilCollapsed"
+
+        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="200dp"/>
+        android:layout_height="wrap_content">
+        <com.ytjojo.viewlib.nestedsrolllayout.CollapsingLayout
+            android:fitsSystemWindows="true"
+            android:id="@+id/collapsingLayout"
+            app:statusBarScrim="?attr/colorPrimary"
+            app:collapsedTitleLayoutGravity="center"
+            app:expandedTitleLayoutGravity="start|left|bottom"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <ImageView
+                android:id="@+id/backdrop"
+                android:layout_width="match_parent"
+                android:layout_height="300dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/cheese_3"
+                android:fitsSystemWindows="true"
+               />
+
+            <android.support.v7.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:fitsSystemWindows="false"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+                app:SuperNested_collapseMode="pin" >
+                <TextView
+                    android:textSize="20sp"
+                    android:background="@android:color/white"
+                    android:text="动作栏"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </android.support.v7.widget.Toolbar>
+
+
+        </com.ytjojo.viewlib.nestedsrolllayout.CollapsingLayout>
+    </LinearLayout>
     <ImageView
         android:src="@drawable/quila"
         app:anchor="@id/tv_header"
