--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -20,7 +20,7 @@
                                                  android:id="@+id/main_content"
                                                  android:layout_width="match_parent"
                                                  android:layout_height="match_parent"
-                                                 android:fitsSystemWindows="false">
+                                                 android:fitsSystemWindows="true">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -33,12 +33,13 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
-            android:minHeight="100dp"
-            android:fitsSystemWindows="true"
+            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
+            android:fitsSystemWindows="false"
             app:contentScrim="?attr/colorPrimary"
-            app:expandedTitleMarginStart="48dp"
-            app:expandedTitleMarginEnd="64dp">
+            app:statusBarScrim="?attr/colorPrimary"
+            app:collapsedTitleGravity="center"
+            app:expandedTitleGravity="start|left|bottom"
+            >
 
             <ImageView
                 android:id="@+id/backdrop"
@@ -50,10 +51,13 @@
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
+                android:fitsSystemWindows="false"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:layout_collapseMode="pin" />
+                app:layout_collapseMode="pin" >
+
+            </android.support.v7.widget.Toolbar>
 
         </android.support.design.widget.CollapsingToolbarLayout>
 
@@ -61,7 +65,6 @@
     <com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#000000"
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
         <TextView
@@ -76,6 +79,7 @@
         <android.support.v4.widget.NestedScrollView
             android:background="#00000000"
             android:layout_width="match_parent"
+            app:scrollFlags="scroll"
             app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
             android:layout_height="match_parent"
 
