--- a/app/src/main/res/menu/main.xml
+++ b/app/src/main/res/menu/main.xml
@@ -4,12 +4,27 @@
     <item
         android:id="@+id/action_scrollview"
         android:orderInCategory="100"
-        android:title="@string/action_scrollview"
+        android:title="headerandrefreshheader_two_nest"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_listview"
         android:orderInCategory="100"
         android:title="@string/action_listview"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/collapsingonenested"
+        android:orderInCategory="100"
+        android:title="collapsingonenested"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/noheadertwonested"
+        android:orderInCategory="100"
+        android:title="noheadertwonested"
+        app:showAsAction="never"/>
+    <item
+        android:id="@+id/existuntil_one"
+        android:orderInCategory="100"
+        android:title="existuntilonenest"
         app:showAsAction="never"/>
     <item
         android:id="@+id/action_webview"
