--- a/app/src/main/res/layout/activity_nestedsrollview.xml
+++ b/app/src/main/res/layout/activity_nestedsrollview.xml
@@ -21,6 +21,7 @@
         android:text="这是头部"
         android:gravity="center"
         android:textSize="30dp"
+        app:controlBehaviorName="ScrollViewBehavior"
         android:minHeight="?attr/actionBarSize"
         android:background="#ff0000"
         app:scrollFlags="scroll|enterAlways|enterAlwaysCollapsed"
@@ -36,7 +37,7 @@
         android:layout_height="60dp"/>
     <android.support.v4.widget.NestedScrollView
         android:fitsSystemWindows="true"
-        app:scrollFlags="scroll"
+        app:controlBehaviorName="ScrollViewBehavior"
         app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
         android:background="#90ffffff"
         android:layout_width="match_parent"
@@ -167,15 +168,15 @@
 
     </android.support.v4.widget.NestedScrollView>
     <TextView
+        app:controlBehaviorName="ScrollViewBehavior"
         android:text="这是中间"
         android:gravity="center"
         android:textSize="30dp"
         android:background="#70fff000"
-        app:scrollFlags="scroll"
         android:layout_width="match_parent"
         android:layout_height="500dp"/>
     <android.support.v4.widget.NestedScrollView
-        app:scrollFlags="scroll"
+        app:controlBehaviorName="ScrollViewBehavior"
         app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
         android:background="#EEffffff"
         android:layout_width="match_parent"
@@ -306,13 +307,145 @@
 
     </android.support.v4.widget.NestedScrollView>
     <TextView
+
+        app:controlBehaviorName="BottomSheetBehavior"
         app:scrollFlags="scroll"
         android:background="#f2e4e4"
         android:layout_width="match_parent"
         android:textSize="15sp"
         android:gravity="center"
-        android:layout_height="400dp"
+        android:layout_height="200dp"
         android:text="市领导看见我就哦对哦我奇偶敌我皮京东奇偶为奇偶的奇偶为叫都叫我ID噢加我的简欧文件我家动物叫都叫我" />
+    <android.support.v4.widget.NestedScrollView
+        app:controlBehaviorName="BottomSheetBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.BottomSheetBehavior"
+        android:background="#EEffffff"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        >
 
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical"
+            android:paddingTop="24dp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="@dimen/card_margin">
+
+                <LinearLayout
+                    style="@style/Widget.CardContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Info"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cheese_ipsum" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/card_margin"
+                android:layout_marginLeft="@dimen/card_margin"
+                android:layout_marginRight="@dimen/card_margin">
+
+                <LinearLayout
+                    style="@style/Widget.CardContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Friends"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cheese_ipsum" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/card_margin"
+                android:layout_marginLeft="@dimen/card_margin"
+                android:layout_marginRight="@dimen/card_margin">
+
+                <LinearLayout
+                    style="@style/Widget.CardContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Related"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cheese_ipsum" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/card_margin"
+                android:layout_marginLeft="@dimen/card_margin"
+                android:layout_marginRight="@dimen/card_margin">
+
+                <LinearLayout
+                    style="@style/Widget.CardContent"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Last"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />
+
+                    <TextView
+                        android:background="#00000000"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@string/cheese_ipsum" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
 
 </com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout>
