--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -68,6 +68,7 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
         <TextView
+            app:controlBehaviorName="ScrollViewBehavior"
             app:scrollFlags="scroll|enterAlways"
             android:text="这是头部"
             android:gravity="center"
@@ -79,7 +80,7 @@
         <android.support.v4.widget.NestedScrollView
             android:background="#00000000"
             android:layout_width="match_parent"
-            app:scrollFlags="scroll"
+            app:controlBehaviorName="ScrollViewBehavior"
             app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
             android:layout_height="match_parent"
 
