--- a/nestscrolllayout/src/main/res/values/styles.xml
+++ b/nestscrolllayout/src/main/res/values/styles.xml
@@ -4,5 +4,7 @@
         <item name="expandedTitleMargin">32dp</item>
         <item name="statusBarScrim">?attr/colorPrimary</item>
     </style>
-
+    <style name="Widget.Design.SuperNestedLayout" parent="android:Widget">
+        <item name="statusBarBackground">?attr/colorPrimaryDark</item>
+    </style>
 </resources>
