--- a/app/src/main/res/layout/activity_jianshu_scroll.xml
+++ b/app/src/main/res/layout/activity_jianshu_scroll.xml
@@ -24,7 +24,7 @@
 
 
     </LinearLayout>
-    <com.ytjojo.viewlib.nestedsrolllayout.EmbeddedWebView
+    <com.ytjojo.viewlib.nestedsrolllayout.CompatWebView
         android:id="@+id/webview"
         app:controlBehaviorName="ScrollViewBehavior"
         app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
