--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -15,7 +15,7 @@
         android:layout_width="match_parent"
         android:minHeight="60dp"
         android:layout_height="200dp"/>
-    <com.ytjojo.viewlib.nestedsrolllayout.EmbeddedWebView
+    <com.ytjojo.viewlib.nestedsrolllayout.CompatWebView
         android:id="@+id/webview"
         app:controlBehaviorName="ScrollViewBehavior"
         app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
