--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,13 +10,13 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context="com.ytjojo.viewlib.nestscrolllayout.demo.MainActivity"
+    tools:context="com.ytjojo.viewlib.nestedscrolllayout.demo.MainActivity"
     tools:showIn="@layout/app_bar_main">
-    <com.ytjojo.viewlib.nestscrolllayout.demo.RefreshHeaderLoadingView
+    <com.ytjojo.viewlib.nestedscrolllayout.demo.RefreshHeaderLoadingView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-    </com.ytjojo.viewlib.nestscrolllayout.demo.RefreshHeaderLoadingView>
+    </com.ytjojo.viewlib.nestedscrolllayout.demo.RefreshHeaderLoadingView>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
