--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -33,7 +33,7 @@
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|enterAlways|exitUntilCollapsed"
+            app:layout_scrollFlags="scroll|snap"
             android:fitsSystemWindows="false"
             app:contentScrim="?attr/colorPrimary"
             app:statusBarScrim="?attr/colorPrimary"
@@ -62,6 +62,25 @@
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
+    <android.support.design.widget.FloatingActionButton
+        android:layout_height="wrap_content"
+        android:layout_width="wrap_content"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|right|end"
+        android:src="@android:drawable/ic_dialog_email"
+        android:layout_margin="@dimen/fab_margin"
+        android:clickable="true"/>
+    <TextView
+        android:visibility="gone"
+        android:textColor="@android:color/white"
+        app:layout_anchor="@id/appbar"
+        app:layout_anchorGravity="bottom|right|end"
+        android:text="中间"
+        android:elevation="100dp"
+        android:gravity="center"
+        android:background="@color/colorAccent"
+        android:layout_width="80dp"
+        android:layout_height="80dp"/>
     <com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -73,7 +92,7 @@
             android:text="这是头部"
             android:gravity="center"
             android:textSize="30dp"
-            android:background="#70ff0000"
+            android:background="#ff0000"
             android:minHeight="45dp"
             android:layout_width="match_parent"
             android:layout_height="100dp"/>
@@ -183,13 +202,6 @@
     </com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout>
 
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_height="wrap_content"
-        android:layout_width="wrap_content"
-        app:layout_anchor="@id/appbar"
-        app:layout_anchorGravity="bottom|right|end"
-        android:src="@android:drawable/ic_dialog_email"
-        android:layout_margin="@dimen/fab_margin"
-        android:clickable="true"/>
+
 
 </android.support.design.widget.CoordinatorLayout>
