--- a/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
+++ b/app/src/main/res/layout/activity_collapinglayout_two_nest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
+<com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -7,18 +7,19 @@
     android:background="#eeeeee"
     android:fitsSystemWindows="true">
 
-    <com.ytjojo.viewlib.nestedscrolllayout.demo.RefreshHeaderLoadingView
+    <com.ytjojo.viewlib.nestedscrolllayout.view.DefultRefreshView
         android:id="@+id/refreshHeader"
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_gravity="top"
         android:elevation="2dp"
         android:fitsSystemWindows="false"
+        app:waveColor="#60FF4081"
         app:anchor="@+id/collapsingLayout"
         app:anchorGravity="right|bottom"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.RefreshHeaderBehavior"/>
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshHeaderBehavior"/>
 
-    <com.ytjojo.viewlib.nestedsrolllayout.CollapsingLayout
+    <com.ytjojo.viewlib.nestedscrolllayout.CollapsingLayout
         android:id="@+id/collapsingLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -36,7 +37,7 @@
         <ImageView
             android:id="@+id/backdrop"
             android:layout_width="match_parent"
-            android:layout_height="300dp"
+            android:layout_height="200dp"
             android:fitsSystemWindows="true"
             android:scaleType="centerCrop"
             android:src="@drawable/cheese_3"
@@ -60,7 +61,7 @@
         </android.support.v7.widget.Toolbar>
 
 
-    </com.ytjojo.viewlib.nestedsrolllayout.CollapsingLayout>
+    </com.ytjojo.viewlib.nestedscrolllayout.CollapsingLayout>
 
     <ImageView
         android:layout_width="60dp"
@@ -77,7 +78,7 @@
         android:layout_height="match_parent"
         android:background="#90ffffff"
         android:fitsSystemWindows="true"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         app:controlBehaviorName="ScrollViewBehavior"
         >
 
@@ -218,7 +219,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EEffffff"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         app:controlBehaviorName="ScrollViewBehavior"
         >
 
@@ -356,4 +357,4 @@
         app:controlBehaviorName="ScrollViewBehavior"/>
 
 
-</com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout>
+</com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout>
