--- a/app/src/main/res/layout/activity_nestedsrollview.xml
+++ b/app/src/main/res/layout/activity_nestedsrollview.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
+<com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,7 +15,7 @@
         android:fitsSystemWindows="true"
         app:anchor="@+id/tv_header"
         app:anchorGravity="right|bottom"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.RefreshHeaderBehavior"/>
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshHeaderBehavior"/>
 
     <TextView
         android:id="@+id/tv_header"
@@ -44,7 +44,7 @@
         android:layout_height="match_parent"
         android:background="#90ffffff"
         android:fitsSystemWindows="true"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         app:controlBehaviorName="ScrollViewBehavior"
         >
 
@@ -185,7 +185,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EEffffff"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         app:controlBehaviorName="ScrollViewBehavior"
         >
 
@@ -331,7 +331,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#EEffffff"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.BottomSheetBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.BottomSheetBehavior"
         app:behavior_canExpandedFully="true"
         app:behavior_hideable="false"
         app:BottomSheet_peekHeight="followMinOffset"
@@ -463,4 +463,4 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-</com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout>
+</com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout>
