--- a/app/src/main/res/layout/activity_no_header_two_nest.xml
+++ b/app/src/main/res/layout/activity_no_header_two_nest.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
+<com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:fitsSystemWindows="true"
@@ -11,14 +11,14 @@
         android:id="@+id/refreshHeader"
         android:layout_gravity="top"
         app:anchorGravity="right|bottom"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.RefreshHeaderBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshHeaderBehavior"
         android:layout_height="60dp"/>
 
     <android.support.v4.widget.NestedScrollView
         android:fitsSystemWindows="true"
         app:controlBehaviorName="ScrollViewBehavior"
         app:baseLine="200dp"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         android:background="#90ffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -157,7 +157,7 @@
         android:layout_height="500dp"/>
     <android.support.v4.widget.NestedScrollView
         app:controlBehaviorName="ScrollViewBehavior"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         android:background="#EEffffff"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -296,4 +296,4 @@
         android:text="市领导看见我就哦对哦我奇偶敌我皮京东奇偶为奇偶的奇偶为叫都叫我ID噢加我的简欧文件我家动物叫都叫我" />
 
 
-</com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout>
+</com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout>
