--- a/app/src/main/res/layout/activity_web.xml
+++ b/app/src/main/res/layout/activity_web.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout
+<com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -15,10 +15,10 @@
         android:layout_width="match_parent"
         android:minHeight="60dp"
         android:layout_height="200dp"/>
-    <com.ytjojo.viewlib.nestedsrolllayout.CompatWebView
+    <com.ytjojo.viewlib.nestedscrolllayout.CompatWebView
         android:id="@+id/webview"
         app:controlBehaviorName="ScrollViewBehavior"
-        app:behavior="com.ytjojo.viewlib.nestedsrolllayout.ScrollViewBehavior"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
     <TextView
@@ -31,4 +31,4 @@
         android:minHeight="60dp"
         android:layout_height="200dp"/>
 
-</com.ytjojo.viewlib.nestedsrolllayout.NestedScrollLayout>
+</com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout>
