--- a/app/src/main/res/layout/activity_viewpager_refresh.xml
+++ b/app/src/main/res/layout/activity_viewpager_refresh.xml
@@ -17,7 +17,6 @@
         app:anchor="@+id/toolbar"
         app:anchorGravity="right|bottom"
         app:isShowWave="true"
-        app:drawingOrderElevation="3dp"
         app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshHeaderBehavior"/>
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar"
@@ -50,6 +49,7 @@
         app:anchor="@id/viewPager"
         app:anchorGravity="right|bottom"/>
     <LinearLayout
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:behavior="com.ytjojo.viewlib.nestedscrolllayout.ScrollViewBehavior"
@@ -74,7 +74,7 @@
 
     </LinearLayout>
     <android.support.v4.widget.NestedScrollView
-        android:visibility="gone"
+        android:visibility="visible"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#90ffffff"
@@ -209,13 +209,25 @@
 
 
     <TextView
+        android:visibility="gone"
+        android:id="@+id/bottom_Tv"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
+        android:layout_height="200dp"
         android:background="#f2e4e4"
         android:gravity="center"
         android:text="市领导看见我就哦对哦我奇偶敌我皮京东奇偶为奇偶的奇偶为叫都叫我ID噢加我的简欧文件我家动物叫都叫我"
         android:textSize="15sp"
+        app:drawingOrderElevation="1dp"
         app:controlBehaviorName="ScrollViewBehavior"/>
 
-
+    <com.ytjojo.viewlib.nestedscrolllayout.view.DefultRefreshView
+        android:id="@+id/refreshFooter"
+        android:layout_width="match_parent"
+        android:layout_height="64dp"
+        android:layout_gravity="bottom"
+        android:fitsSystemWindows="false"
+        app:anchorGravity="right|top"
+        app:waveColor="#60FF4081"
+        app:isShowWave="true"
+        app:behavior="com.ytjojo.viewlib.nestedscrolllayout.RefreshFooterBehavior"/>
 </com.ytjojo.viewlib.nestedscrolllayout.NestedScrollLayout>
